testdata/language-features/basic-list/list14.reject.out
type error: can not unify
  [Char]
with
  ()
in ./testdata/language-features/basic-list/list14.reject.lc:1:17:
value = 'h':'i':()
                ^^
------------ trace
!type error: can not unify
  [Char]
with
  ()
in ./testdata/language-features/basic-list/list14.reject.lc:1:17:
value = 'h':'i':()
                ^^
------------ tooltips
1:9-1:12
    Char
1:9-1:13
    [Char] -> [Char]
1:12-1:13
    forall a . a -> [a] -> [a]
1:13-1:16
    Char
1:13-1:17
    [Char] -> [Char]
1:16-1:17
    forall a . a -> [a] -> [a]
1:17-1:19
    ()